--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     
         <section>
             <h2>Contact Information</h2>
-            <p>Email: kimsacher@yahoo.com</p>
+            <p>Email: kimsacher@proton.me</p>
             <p>based in Munich, Germany</p>
         </section>
     
