--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h1 class = "title2"> SACHER </h1>
 
     <p class="subtitle">
-    aspiring webdesinger and developer
+    Aspiring Web Designer and Developer
     </p>
   
 </body>
